connect back end DB with movie search page

--- a/movieSearch/index.html
+++ b/movieSearch/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Registration Page</title>
+    <title>Find A Movie</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   </head>
 
@@ -60,36 +60,22 @@
           </div>
           
           <div class="panel-body">
-            <p>The results of the database search will populate here:</p><br><br>
+            <p>The results of the database search will populate here:</p><br>
 
-            <table>
+            <table id="resultsTable">
               <tr>
-                <th>Movie Title</th>
-                <th>Genre</th>
-                <th>Movie Rating</th>
+                <th>Movie ID&emsp;</th>
+                <th>Movie Title&emsp;</th>
+                <th>Genre&emsp;&emsp;</th>
+                <th>Movie Rating&emsp;</th>
               </tr>
-              <tr>
-                <td>500 Days of Summer</td>
-                <td>Comedy</td>
-                <td>R</td>
-              </tr>
-              <tr>
-                <td>Life as We Know It</td>
-                <td>Comedy</td>
-                <td>G</td>
-              </tr>
-              <tr>
-                <td>Marley and Me</td>
-                <td>Comedy</td>
-                <td>G</td>
-              </tr>
+
             </table>
 
           </div>
-          </div>
         </div>
       </div>
-
+    </div>
 
   </body>
 </html>
